Fix page layout issue

--- a/app/assets/stylesheets/waldo.css
+++ b/app/assets/stylesheets/waldo.css
@@ -60,7 +60,7 @@ p {
   margin-top: 20px;
 }
 
-body {
+#index-container {
   width: 840px;
   margin: auto;
 }
